✅ Fix SCSS styles, link all components & add new features ✨💅

--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -11,6 +11,10 @@
 //Auth
 @use "auth/login.scss";
 @use "auth/register.scss";
+//guestDashboard
+@use "guestdashboard/guestDashboard.scss";
+//hostDashboard
+@use "hostdashboard/HostDashboard.module.scss";
 
 
 
