--- a/web/src/styles/sass/hostdashboard/HostDashboard.module.scss
+++ b/web/src/styles/sass/hostdashboard/HostDashboard.module.scss
@@ -1,48 +1,49 @@
-.dashboardHeader {
+.dashboardPage {
+  .dashboardHeader {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-}
+  }
 
-.welcomeMsg {
+  .welcomeMsg {
     padding: 0;
-}
+  }
 
-.dashboardHost {
+  .dashboardHost {
     display: flex;
     justify-content: flex-start;
     gap: 5rem;
     width: 100%;
-}
+  }
 
-.dashboardContainer {
+  .dashboardContainer {
     width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     gap: 4em;
-}
+  }
 
-.dashboardLeft {
+  .dashboardLeft {
     display: flex;
     flex-direction: column;
     gap: 2em;
     animation: fade-up 2s;
-}
+  }
 
-.dashboardRight {
+  .dashboardRight {
     animation: fade-up 4s;
-}
+  }
 
-.personalInfoContent {
+  .personalInfoContent {
     display: flex;
     flex-direction: column;
     margin-left: 1px;
     width: 100%;
-}
+  }
 
-.personalInfoBox {
+  .personalInfoBox {
     background-color: #fff;
     border-radius: 15px;
     padding: 20px;
@@ -50,29 +51,29 @@
     margin-bottom: 10px;
     width: auto;
     font-size: 0.9em;
-}
 
-.personalInfoBox span {
-    margin-right: auto;
-}
+    span {
+      margin-right: auto;
+    }
+  }
 
-.buttonBox {
+  .buttonBox {
     display: flex;
     flex-direction: row;
     justify-content: start;
     gap: 5%;
     border-radius: 1rem;
-}
+  }
 
-.dashboardCard {
+  .dashboardCard {
     height: 35vh;
     width: 17vw;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 0.5em;
     position: relative;
-}
+  }
 
-.accommodationText {
+  .accommodationText {
     padding: 0.25em;
     width: 80%;
     background-color: black;
@@ -86,22 +87,22 @@
     top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
+  }
 
-.accommodationTitle {
+  .accommodationTitle {
     color: white;
     margin: 0;
     font-size: 0.75em;
     background-color: black;
-}
+  }
 
-.accommodationLocation {
+  .accommodationLocation {
     color: white;
     font-size: 0.6em;
     margin-top: 1%;
-}
+  }
 
-.accommodationImg {
+  .accommodationImg {
     max-height: 70%;
     max-width: none;
     border-radius: 0.5em 0.5em 0 0;
@@ -109,57 +110,54 @@
     align-self: center;
     width: 100%;
     height: 70%;
-}
+  }
 
-.accommodationDetails {
+  .accommodationDetails {
     padding: 10px;
-}
 
-.accommodationDetails p {
-    font-size: 0.75rem;
-}
+    p {
+      font-size: 0.75rem;
+    }
+  }
 
-.isDrafted {
+  .isDrafted,
+  .isLive {
     color: var(--domits-host-blue);
-}
+  }
 
-.isLive {
-    color: var(--domits-host-blue);
-}
-
-.greenBtn {
+  .greenBtn {
     color: white;
     background-color: var(--domits-host-blue);
     border: none;
     padding: 10px 25px;
     border-radius: 10px;
     cursor: pointer;
-}
 
-.greenBtn:hover {
-    opacity: 90%;
-}
+    &:hover {
+      opacity: 90%;
+    }
+  }
 
-.infoBox {
+  .infoBox {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 1em;
-}
+  }
 
-.infoIcon {
+  .infoIcon {
     max-width: 1.5em;
     max-height: 1.5em;
-}
+  }
 
-.alertMessage {
+  .alertMessage {
     margin: 15px;
     font-weight: bold;
     text-align: center;
     font-size: 1.5rem;
-}
+  }
 
-.wijzer {
+  .wijzer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -174,13 +172,13 @@
     transition: all 0.3s ease;
     font-size: 0.75em;
     text-align: center;
-}
+  }
 
-.header {
+  .header {
     font-size: 1.75em;
-}
+  }
 
-.imgSliderImage {
+  .imgSliderImage {
     border-radius: 2em;
     height: auto;
     max-height: 15vh;
@@ -188,149 +186,148 @@
     opacity: 0;
     padding: 1em;
     transition: opacity 1s ease-in-out;
-}
+  }
 
-.visible {
+  .visible {
     opacity: 1;
-}
+  }
 
-.hostListingContainer {
+  .hostListingContainer {
     width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 4em;
-}
+  }
 
-.listingBody {
+  .listingBody {
     display: flex;
     flex-direction: column;
-}
+  }
 
-.listingsDisplay {
+  .listingsDisplay {
     box-shadow: 0 2px 8px 0 #63636333;
     border-radius: 1rem;
     padding: 1rem;
     margin-top: 5%;
-}
+  }
 
-.loadingContainer {
+  .loadingContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 2rem;
-}
+  }
 
-.spinner {
+  .spinner {
     max-width: 25vw;
     max-height: 25vh;
-}
+  }
 
-@media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 768px) {
     .dashboardHeader {
-        flex-direction: column;
-        align-items: center;
+      flex-direction: column;
+      align-items: center;
     }
 
     .dashboardHost {
-        flex-direction: column;
-        gap: 2rem;
+      flex-direction: column;
+      gap: 2rem;
     }
 
     .dashboardContainer {
-        flex-direction: column;
-        gap: 2em;
+      flex-direction: column;
+      gap: 2em;
     }
 
     .dashboardLeft,
     .dashboardRight {
-        width: 100%;
-        gap: 1em;
+      width: 100%;
+      gap: 1em;
     }
 
     .dashboardCard {
-        height: auto;
-        width: 80vw;
+      height: auto;
+      width: 80vw;
     }
 
     .accommodationText {
-        width: 90%;
+      width: 90%;
     }
 
     .accommodationImg {
-        height: auto;
+      height: auto;
     }
 
     .buttonBox {
-        flex-direction: column;
-        gap: 1rem;
-        padding: 1rem;
+      flex-direction: column;
+      gap: 1rem;
+      padding: 1rem;
     }
 
     .greenBtn {
-        width: 100%;
+      width: 100%;
     }
 
     .infoBox {
-        flex-direction: column;
-        align-items: flex-start;
+      flex-direction: column;
+      align-items: flex-start;
     }
 
     .hostListingContainer {
-        flex-direction: column;
-        gap: 2rem;
+      flex-direction: column;
+      gap: 2rem;
     }
 
     .listingsDisplay {
-        margin-top: 2%;
+      margin-top: 2%;
     }
 
     .imgSliderImage {
-        max-width: 100%;
-        max-height: 20vh;
+      max-width: 100%;
+      max-height: 20vh;
     }
-}
+  }
 
-@media only screen and (max-width: 480px) {
+  @media only screen and (max-width: 480px) {
     .dashboardCard {
-        height: auto;
-        width: 90vw;
+      height: auto;
+      width: 90vw;
     }
 
     .accommodationText {
-        font-size: 0.65em;
+      font-size: 0.65em;
     }
 
     .personalInfoContent {
-        display: flex;
-        flex-direction: column;
-        margin-left: 0.5px;
-        width: 90vw;
+      margin-left: 0.5px;
+      width: 90vw;
     }
 
     .accommodationTitle,
     .accommodationLocation {
-        font-size: 0.6em;
+      font-size: 0.6em;
     }
 
     .dashboardContainer {
-        gap: 1em;
+      gap: 1em;
     }
 
     .welcomeMsg {
-        font-size: 0.8rem;
+      font-size: 0.8rem;
     }
 
     .alertMessage {
-        font-size: 1.2rem;
+      font-size: 1.2rem;
     }
 
     .header {
-        font-size: 1.5em;
+      font-size: 1.5em;
     }
 
     .wijzer {
-        width: 150px;
-        font-size: 0.65em;
+      width: 150px;
+      font-size: 0.65em;
     }
+  }
 }
