--- a/web/src/styles/sass/base/SearchBar.scss
+++ b/web/src/styles/sass/base/SearchBar.scss
@@ -5,7 +5,6 @@ $shadow-default: 0 0 5px hsl(0 0% 78%);
 $shadow-dropdown: 0 4px 8px rgba(0, 0, 0, 0.4);
 $primary-domits-color: #0d9813;
 
-
 @mixin flex-center {
   display: flex;
   justify-content: center;
@@ -37,7 +36,7 @@ $primary-domits-color: #0d9813;
   margin-bottom: 0.4rem;
 }
 
-.Search-bar-main {
+.search-bar-main {
   width: 42rem;
   margin: auto;
   box-shadow: $shadow-default;
@@ -47,7 +46,7 @@ $primary-domits-color: #0d9813;
   height: 3.43rem;
   background-color: white;
 
-  >div {
+  > div {
     position: relative;
     &::before {
       position: absolute;
@@ -76,19 +75,7 @@ $primary-domits-color: #0d9813;
     }
   }
 
-  .searchTitle {
-    color: $primary-domits-color;
-    font-size: 1rem;
-    font-family: $primary-font;
-    font-weight: 500;
-    text-overflow: ellipsis;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .Search-check-in-out {
+  .search-check-in-out {
     width: 17%;
     cursor: auto;
 
@@ -110,7 +97,7 @@ $primary-domits-color: #0d9813;
     }
   }
 
-  .Search-location {
+  .search-location {
     width: 36%;
 
     @include mobile {
@@ -180,7 +167,7 @@ $primary-domits-color: #0d9813;
     margin-right: 1rem;
   }
 
-  .Search-button-section {
+  .search-button-section {
     border: none;
     display: flex;
     justify-content: center;
@@ -191,7 +178,7 @@ $primary-domits-color: #0d9813;
     width: 10%;
   }
 
-  .Search-error-message {
+  .search-error-message {
     background-color: #f8d7da;
     color: #ff0019;
     border: 2px solid #f5c6cb;
@@ -208,7 +195,7 @@ $primary-domits-color: #0d9813;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   }
 
-  .Search-guest-dropdown {
+  .search-guest-dropdown {
     display: none;
     position: absolute;
     top: calc(100% + 0.625rem);
@@ -239,6 +226,13 @@ $primary-domits-color: #0d9813;
     }
   }
 
+  .search-title-type {
+    color: $primary-domits-color;
+    font-size: 1rem;
+    font-weight: 500;
+    transform: translateY(-45%);
+  }
+
   @keyframes dropdownFadeIn {
     0% {
       opacity: 0;
@@ -251,7 +245,7 @@ $primary-domits-color: #0d9813;
     }
   }
 
-  .Search-guestCounter {
+  .search-guest-counter {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -259,38 +253,38 @@ $primary-domits-color: #0d9813;
     border-bottom: 1px solid $primary-domits-color;
   }
 
-  .Search-guestCounter:last-child {
+  .search-guest-counter:last-child {
     border-bottom: none;
   }
 
-  .Search-guestLabel {
+  .search-guest-label {
     font-size: 1rem;
     color: $primary-domits-color;
     text-align: left;
   }
 
-  .Search-selected {
+  .search-select-container {
     color: green;
   }
 
-  .Search-guestDescription {
+  .search-guest-description {
     font-size: 0.7rem;
     color: #666;
     text-align: left;
   }
 
-  .Search-guestCounter .Search-controls {
+  .search-guest-counter .search-controls {
     display: flex;
     align-items: center;
     padding: 0 0.625rem;
   }
 
-  .Search-guestCounter .Search-controls span {
+  .search-guest-counter .search-controls span {
     margin: 0 0.625rem;
     font-size: 1rem;
   }
 
-  .Search-guestCounter .Search-controls button {
+  .search-guest-counter .search-controls button {
     border: 2px solid #cccccc;
     border-radius: 50%;
     background-color: #fff;
@@ -305,28 +299,26 @@ $primary-domits-color: #0d9813;
     color: #000;
   }
 
-  .Search-guestCounter .Search-controls button:hover {
+  .search-guest-counter .search-controls button:hover {
     border-color: $primary-domits-color;
   }
 
-  .Search-guestCounter .Search-controls button:disabled {
+  .search-guest-counter .search-controls button:disabled {
     cursor: not-allowed;
     opacity: 0.5;
   }
 
-  .searchTitleGuest.hidden {
+  .search-title-guest.hidden {
     display: none;
   }
 
-  .searchTitleGuest {
-    position: absolute;
+  .search-title-guest {
     color: $primary-domits-color;
     font-size: 1rem;
     font-weight: 500;
   }
 
-  .Search-guestP {
-    text-align: left;
+  .search-guest-text {
     font-weight: 500;
     color: #000;
     font-size: 0.75rem;
@@ -346,22 +338,22 @@ $primary-domits-color: #0d9813;
     padding: 0.6rem;
     box-sizing: border-box;
 
-    >div::before {
+    > div::before {
       display: none;
     }
 
-    .Search-location,
-    .Search-check-in-out,
-    .Search-button-section,
-    .searchSelectContainer {
+    .search-location,
+    .search-check-in-out,
+    .search-button-section,
+    .search-select-container {
       @include mobile-section-common;
     }
 
-    .Search-location {
+    .search-location {
       height: 3rem;
     }
 
-    .Search-check-in-out {
+    .search-check-in-out {
       height: 3.4rem;
 
       .input-calendar-checkInOut {
@@ -392,20 +384,14 @@ $primary-domits-color: #0d9813;
       margin-top: 0.5rem;
     }
 
-    .Search-guest-dropdown {
+    .search-guest-dropdown {
       width: calc(120% - 1.875rem);
       left: 50%;
       right: 50%;
       top: -275%;
     }
 
-    .searchTitleGuest {
-      transform: translateY(-15%);
-      text-align: center;
-      text-overflow: ellipsis;
-    }
-
-    .Search-error-message {
+    .search-error-message {
       padding: 12px 24px;
       border-radius: 8px;
       font-size: 16px;
@@ -438,7 +424,6 @@ $primary-domits-color: #0d9813;
     width: 85%;
   }
 
-
   @media (min-width: 2500px) {
     .responsive-calendar {
       font-size: 0.8rem !important;
@@ -458,7 +443,6 @@ $primary-domits-color: #0d9813;
   }
 
   @media (max-width: 1500px) {
-
     .Calendar__monthSelectorItemText,
     .Calendar__yearSelectorText {
       font-size: 10px !important;
@@ -466,7 +450,6 @@ $primary-domits-color: #0d9813;
   }
 
   @media (max-width: 1200px) {
-
     .Calendar__monthSelectorItemText,
     .Calendar__yearSelectorText {
       font-size: 7px !important;
@@ -474,7 +457,6 @@ $primary-domits-color: #0d9813;
   }
 
   @include mobile {
-
     .Calendar__monthSelectorItemText,
     .Calendar__yearSelectorText {
       font-size: 1rem !important;
@@ -482,7 +464,6 @@ $primary-domits-color: #0d9813;
   }
 
   @media (min-width: 2500px) {
-
     .Calendar__monthSelectorItemText,
     .Calendar__yearSelectorText {
       font-size: 15px !important;
@@ -490,7 +471,6 @@ $primary-domits-color: #0d9813;
   }
 
   @include mobile {
-
     .input-calendar-checkInOut,
     .DatePicker__input {
       font-size: 0.5rem;
@@ -498,21 +478,20 @@ $primary-domits-color: #0d9813;
   }
 
   @include mobile {
-
-    .Search-button-section,
-    .searchSelectContainer,
-    .Search-check-in-out {
+    .search-button-section,
+    .search-select-container,
+    .search-check-in-out {
       background-color: #f0f0f0;
       border-radius: $border-radius-md;
       width: 100%;
       margin-bottom: 0.4rem;
     }
 
-    .Search-check-in-out {
+    .search-check-in-out {
       height: 3.4rem;
     }
 
-    .Search-location {
+    .search-location {
       background-color: #f0f0f0;
       border-radius: $border-radius-md;
       width: 100%;
@@ -521,7 +500,7 @@ $primary-domits-color: #0d9813;
       text-overflow: ellipsis;
     }
 
-    .Search-button-section {
+    .search-button-section {
       background-color: #f0f0f0;
       border-radius: $border-radius-md;
       width: 100%;
@@ -530,18 +509,19 @@ $primary-domits-color: #0d9813;
       height: 3rem;
     }
 
-    .searchSelectContainer {
+    .search-select-container {
       height: 2.8rem;
     }
 
-    .searchTitleGuest {
-      transform: translateX(-0%);
-      transform: translateY(-15%);
-      text-align: center;
+    .search-title-type {
+      display: flex;
+      justify-content: center;
+      transform: translateY(0%);
+      align-items: center;
       text-overflow: ellipsis;
     }
 
-    .Search-guestP {
+    .search-guest-text {
       position: absolute;
     }
 
@@ -569,7 +549,7 @@ $primary-domits-color: #0d9813;
       margin-top: 0.5rem;
     }
 
-    .Search-bar-main>div::before {
+    .search-bar-main > div::before {
       background: transparent;
     }
 
@@ -584,11 +564,11 @@ $primary-domits-color: #0d9813;
       border-color: transparent;
     }
 
-    .Search-ClearButton {
+    .search-ClearButton {
       margin-top: 0.5rem;
     }
 
-    .Search-error-message {
+    .search-error-message {
       background-color: #f8d7da;
       color: #721c24;
       border: 2px solid #f5c6cb;
@@ -611,7 +591,6 @@ $primary-domits-color: #0d9813;
       transform: translateY(15%);
     }
   }
-  
 
   @include mobile {
     .search-text {
@@ -620,11 +599,11 @@ $primary-domits-color: #0d9813;
   }
 
   @include mobile {
-    .Search-bar-main {
+    .search-bar-main {
       display: none;
     }
 
-    .bar-container .Search-bar-main {
+    .search-bar-container .search-bar-main {
       display: block;
     }
   }
@@ -650,12 +629,12 @@ $primary-domits-color: #0d9813;
       text-overflow: ellipsis;
     }
 
-    .Search-bar-main>div::before {
+    .search-bar-main > div::before {
       display: none;
     }
   }
 
-  .searchSelectContainer {
+  .search-select-container {
     .custom-select-dropdown-menu__control {
       width: 8.8rem;
       height: 2.7rem;
@@ -725,7 +704,7 @@ $primary-domits-color: #0d9813;
   }
 
   @include mobile {
-    .searchSelectContainer {
+    .search-select-container {
       .custom-select-dropdown-menu__control {
         width: 100%;
         transform: translateX(0);
@@ -759,7 +738,7 @@ $primary-domits-color: #0d9813;
     text-align: center;
   }
 
-  .Search-close-guest-dropdown {
+  .search-close-guest-dropdown {
     position: absolute;
     padding: 0.3rem;
     right: 10px;
@@ -769,7 +748,6 @@ $primary-domits-color: #0d9813;
     cursor: pointer;
     font-size: 1.1rem;
   }
-
 
   .responsive-calendar {
     font-size: 11px !important;
@@ -809,7 +787,7 @@ $primary-domits-color: #0d9813;
     color: transparent;
   }
 
-  .Calendar__monthYear>* {
+  .Calendar__monthYear > * {
     font-size: 1.4em;
     color: black;
   }
