--- a/web/src/pages/howitworks/howitworksrework.css
+++ b/web/src/pages/howitworks/howitworksrework.css
@@ -87,6 +87,15 @@
   gap: 2rem;
 }
 
+.howitworks__info-block--guests {
+  background: green;
+}
+
+.howitworks__info-block--hosts {
+  background: #052C5A;
+  margin-bottom: 7rem;
+}
+
 .howitworks__info-item {
   width: 22.9em;
   margin-top: 1rem;
@@ -200,8 +209,19 @@
 @media (max-width: 975px) {
   .howitworks__info-block {
     width: 95%;
-  };
+  }
+}
 
+@media (max-width: 840px) {
+  .howitworks__info-block.howitworks__info-block--guests {
+    background-color: transparent;
+    gap: 0rem;
+  }
+
+  .howitworks__info-block.howitworks__info-block--hosts {
+    background-color: transparent;
+    gap: 0rem;
+  }
 
   .howitworks__info-title {
     padding-right: 1.5rem;
@@ -213,7 +233,7 @@
   }
 
   .howitworks__info-block.howitworks__info-block--guests>.howitworks__info-item {
-    background: rgb(88, 153, 22);
+    background:green;
     border-radius: 1rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
