--- a/web/src/features/hostdashboard/HostDashboard.module.scss
+++ b/web/src/features/hostdashboard/HostDashboard.module.scss
@@ -1,6 +1,64 @@
+.greenBtn {
+  color: white;
+  background-color: var(--domits-host-blue);
+  border: none;
+  padding: 10px 25px;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 0 10px;
+
+  &:hover {
+    opacity: 90%;
+  }
+}
+.dashboardCard {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  overflow: hidden;
+  height: 48vh;
+  width: 17vw;
+  margin: 2rem 1rem;
+  border-radius: 1rem;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  background-color: #f5f5f5;
+  cursor: pointer;
+  padding: 40px 10px 20px 10px;
+
+  &:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+
+  button{
+    border-radius: 10px;
+    border: 0;
+    background-color: var(--domits-host-blue);
+    color: white;
+    cursor: pointer;
+    padding: 10px 20px;
+    font-size: 1rem;
+    font-weight: 600;
+    transition: box-shadow 0.5s ease;
+    margin-top: 1rem;
+    &:hover {
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+    }
+
+  }
+}
 .dashboardHeader {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
 }
 
@@ -63,33 +121,6 @@
     }
   }
 
-  .dashboardCard {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    overflow: hidden;
-    height: 40vh;
-    width: 17vw;
-    margin: 1rem;
-    border-radius: 1rem;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-    background-color: #f5f5f5;
-    cursor: pointer;
-
-    &:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
-    }
-
-    img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-    }
-  }
-
   .accommodationText {
     top: 0;
     left: 0;
@@ -104,7 +135,7 @@
 
   .accommodationTitle {
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 800;
     max-width: 90%;
     margin: 0;
   }
