--- a/web/src/features/hostdashboard/hostmessages/styles/sass/contactlist/hostContactList.scss
+++ b/web/src/features/hostdashboard/hostmessages/styles/sass/contactlist/hostContactList.scss
@@ -1,4 +1,4 @@
-.host-contact-list-modal {
+.host-contact-list-modal, .guest-contact-list-modal {
     background-color: #fff;
     display: flex;
     flex-direction: column;
